--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -25,6 +25,12 @@
     line-height: 1.16;
     margin-bottom: 50px;
   }
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
+    line-height: 1.08;
+    letter-spacing: -0.01em;
+  }
 }
 
 .about-us__list {
@@ -40,6 +46,10 @@
     flex-wrap: wrap;
     flex-direction: row;
     width: 630px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 645px;
   }
 }
 
@@ -81,6 +91,10 @@
 
 .about-us__image {
   margin-bottom: 20px;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 6px;
+  }
 }
 
 .about-us__item {
@@ -96,7 +110,7 @@
 
   @media (min-width: $desktop-width) {
     &:not(:last-of-type) {
-      margin-bottom: 60px;
+      margin-bottom: 44px;
     }
   }
 }
