--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -11,7 +11,7 @@
 
   @media (min-width: $desktop-width) {
     background: url("../img/hero-desktop@1x.jpg") no-repeat center top rgb(249, 249, 249);
-    margin-bottom: 140px;
+    margin-bottom: 118px;
   }
 }
 
@@ -37,10 +37,16 @@
   flex-wrap: wrap;
 }
 
+.handwork__title-br {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
 .handwork__text {
   @include page-title;
 
-  padding: 72px 52px 127px 52px;
+  padding: 72px 36px 127px 36px;
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
@@ -54,7 +60,7 @@
     font-size: 53px;
     font-weight: bold;
     line-height: 1.08;
-    padding: 161px 268px 354px 268px;
+    padding: 156px 268px 358px 268px;
   }
 }
 
@@ -70,10 +76,6 @@
     font-size: 20px;
     line-height: 1.5;
     padding: 25px 0 40px 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding: 35px 0;
   }
 }
 
