--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,5 +1,9 @@
 .reviews {
   margin-bottom: 85px;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 158px;
+  }
 }
 
 .reviews__wrapper {
@@ -14,6 +18,8 @@
   @media (min-width: $desktop-width) {
     width: 875px;
     margin-left: auto;
+    padding-top: 78px;
+    margin-bottom: 0;
   }
 }
 
@@ -29,7 +35,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    background: url("../img/review@1x.jpg") no-repeat 7% 27%;
+    background: url("../img/review@1x.jpg") 6% 5% no-repeat;
     padding-bottom: 60px;
   }
 }
@@ -66,6 +72,17 @@
 
   @media (min-width: $desktop-width) {
     width: 770px;
+    margin-bottom: 38px;
+    line-height: 1.83;
+    // letter-spacing: -0.03em;
+  }
+}
+
+.reviews__text-br {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: block;
   }
 }
 
@@ -78,6 +95,12 @@
   @media (min-width: $tablet-width) {
     font-size: 18px;
     line-height: 1.33;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 18px;
+    line-height: 1.33;
+    letter-spacing: -0.03em;
   }
 }
 
@@ -126,7 +149,7 @@
 }
 
 .reviews__write-btn {
-  padding: 20px 40px;
+  padding: 14px 80px;
 
   @include button-style;
 
