--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -62,6 +62,14 @@
   line-height: 1.41;
   text-decoration: none;
   color: #000000;
+
+  &:hover {
+    @include hover-opacity;
+  }
+
+  &:active {
+    @include down-opacity;
+  }
 }
 
 .menu__list-delivery {
