--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -100,6 +100,19 @@
   margin: 0;
 }
 
+.contacts__field {
+  text-decoration: none;
+  color: #000000;
+
+  &:hover {
+    color: $color-brand;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
 .contacts__value,
 .contacts__field {
   vertical-align: top;
