--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -32,20 +32,20 @@
 }
 
 .form__names {
-  margin-top: 6px;
+  margin-top: -16px;
   margin-bottom: 26px;
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
     width: 500px;
-    margin-top: 0;
     margin-left: auto;
   }
 
   @media (min-width: $desktop-width) {
     width: 800px;
     margin: 0 auto;
+    margin-top: -16px;
   }
 }
 
@@ -67,14 +67,16 @@
 
 .form__first-name,
 .form__last-name {
-  @media (min-width: $tablet-width) {
-    margin-bottom: 40px;
-  }
+  margin-bottom: 22px;
 }
 
 .form__first-name,
 .form__last-name,
 .form__father-name {
+  @media (max-width: $mobile-width-only) {
+    line-height: 0.1;
+  }
+
   @media (min-width: $tablet-width) {
     display: flex;
   }
@@ -210,11 +212,11 @@
   padding: 0;
 
   @media (min-width: $tablet-width) {
-    padding: 67px 0 22px 0;
+    padding: 67px 0 26px 0;
   }
 
   @media (min-width: $desktop-width) {
-    padding-bottom: 48px;
+    padding-bottom: 54px;
   }
 }
 
@@ -249,15 +251,26 @@
 }
 
 .form__legend-names {
+  @media (max-width: $mobile-width-only) {
+    margin: 0 0 45px 0;
+  }
   margin: 0 0 18px 0;
 }
 
 .form__legend-phone {
   margin-bottom: 12px;
+
+  @media (max-width: $mobile-width-only) {
+    margin: 0;
+  }
 }
 
 .form__legend-email {
   margin-bottom: 14px;
+
+  @media (max-width: $mobile-width-only) {
+    margin: 0;
+  }
 }
 
 .form__legend-additionally {
@@ -326,7 +339,12 @@
   width: 100%;
   border: none;
   box-shadow: inset 0 -2px 0 0 #000000;
-  padding: 10px 0 18px 0;
+  padding: 0 0 18px 0;
+  min-height: 52px;
+
+  @media (max-width: $mobile-width-only) {
+    padding: 0;
+  }
 
   @media (min-width: $tablet-width) {
     &::placeholder {
@@ -335,7 +353,7 @@
     }
     width: 428px;
     margin-left: auto;
-    padding: 0 0 19px 16px;
+    padding: 0 0 0 16px;
   }
 
   @media (min-width: $desktop-width) {
@@ -363,12 +381,14 @@
 
   @media (max-width: $mobile-width-only) {
     letter-spacing: 0.06em;
+    padding: 0;
   }
 
   @media (min-width: $tablet-width) {
-    padding: 0 0 19px 17px;
-    margin-bottom: 14px;
     width: 500px;
+    padding: 0 0 0 17px;
+    margin-top: -16px;
+    margin-bottom: 14px;
     margin-left: 108px;
   }
 
@@ -385,9 +405,13 @@
     width: 100%;
   }
 
+  @media (min-width: $tablet-width) {
+    margin-top: -16px;
+  }
+
   @media (min-width: $desktop-width) {
     width: 700px;
-    margin-left: 55px;
+    margin-left: 60px;
   }
 }
 
@@ -426,12 +450,14 @@
 }
 
 .form__text-mb {
+  align-self: center;
+
   &:not(:last-of-type) {
     margin-bottom: 20px;
   }
 
   @media (min-width: $tablet-width) {
-    align-self: baseline;
+    // align-self: baseline;
     margin-right: 24px;
   }
 }
@@ -486,6 +512,6 @@
 .form__fieldset-email {
   @media (min-width: $tablet-width) {
     background-color: #f1f1f1;
-    padding: 68px 0 24px 0;
+    padding: 68px 0 21px 0;
   }
 }
