add hover-focus and fixes PP

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -95,11 +95,15 @@
 }
 
 .catalog__link:hover > .catalog__shadow {
-  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  @media (min-width: $desktop-width) {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  }
 }
 
 .catalog__link:active > .catalog__shadow {
-  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+  @media (min-width: $desktop-width) {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+  }
 }
 
 .catalog__image {
@@ -119,7 +123,7 @@
   }
 }
 
-.catalog__desc {
+.catalog__shadow {
   width: 205px;
   margin: 0 auto;
 
@@ -129,13 +133,17 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 266px;
+    width: 100%;
+    transition: all 0.2s ease;
   }
 }
 
-.catalog__shadow {
-  width: 100%;
-  transition: all 0.2s ease;
+.catalog__desc {
+  margin: 0 auto;
+
+  @media (min-width: $desktop-width) {
+    width: 266px;
+  }
 }
 
 .catalog__title {
