--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -336,11 +336,21 @@
     line-height: 1.06;
     color: $color-danger;
   }
+  font-size: 19px;
+  color: $color-danger;
   width: 100%;
   border: none;
   box-shadow: inset 0 -2px 0 0 #000000;
   padding: 0 0 18px 0;
   min-height: 52px;
+
+  &:hover {
+    box-shadow: inset 0 -2px 0 0 #62d1ba;
+  }
+
+  &:focus {
+    box-shadow: inset 0 -2px 0 0 #62d1ba;
+  }
 
   @media (max-width: $mobile-width-only) {
     padding: 0;
@@ -434,18 +444,30 @@
     font-size: 17px;
     line-height: 1.26;
     color: $color-danger;
-    padding: 12px 55px 0 14px;
   }
+
+  font-size: 17px;
+  line-height: 1.26;
+  color: $color-danger;
   width: 100%;
   height: 140px;
   resize: none;
   border: solid 2px $color-danger;
+  padding: 12px 55px 0 14px;
+
+  &:hover,
+  &:focus {
+    border: solid 2px $color-brand;
+  }
 
   @media (min-width: $tablet-width) {
     &::placeholder {
       font-size: 19px;
       line-height: 0.95;
     }
+
+    font-size: 19px;
+    line-height: 0.95;
   }
 }
 
