--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -138,6 +138,7 @@
   position: relative;
   text-align: center;
   margin-bottom: 30px;
+  min-height: 457px;
 
   @media (max-width: $mobile-width-only) {
     width: 320px;
@@ -157,6 +158,20 @@
     float: right;
     margin-top: -177px;
   }
+}
+
+.contacts__map-js {
+  position: relative;
+  float: right;
+  top: 0;
+  right: 0;
+  width: 525px;
+  min-height: 457px;
+  margin-top: -177px;
+}
+
+.contacts__map-js--dn {
+  display: none;
 }
 
 .contacts__pin {
