--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -134,7 +134,8 @@
   }
 }
 
-.contacts__map {
+.contacts__map,
+.contacts__map-js {
   position: relative;
   text-align: center;
   margin-bottom: 30px;
@@ -154,20 +155,10 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: auto;
+    width: 525px;
     float: right;
     margin-top: -177px;
   }
-}
-
-.contacts__map-js {
-  position: relative;
-  float: right;
-  top: 0;
-  right: 0;
-  width: 525px;
-  min-height: 457px;
-  margin-top: -177px;
 }
 
 .contacts__map-js--dn {
